Fix for Bug 341235 - [ScrollBar] Make minimum thumb size themeable

--- a/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/scrollbarkit/ScrollBar.default.css
+++ b/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/scrollbarkit/ScrollBar.default.css
@@ -23,6 +23,7 @@ ScrollBar-Thumb {
   border: 1px solid #b4b4b4;
   border-radius: 0px;
   background-image: none;
+  min-height: 20px;
 }
 
 ScrollBar-Thumb:pressed {
